--- a/app/src/main/res/layout/recipe_list_item.xml
+++ b/app/src/main/res/layout/recipe_list_item.xml
@@ -1,25 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/recipes_card"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_marginBottom="@dimen/activity_horizontal_margin"
-        >
+        android:layout_marginBottom="5dp"
+        android:minHeight="179dp">
 
-        <TextView
-            android:layout_margin="@dimen/activity_horizontal_margin"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="texting name"
-            android:id="@+id/recipes_title"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textAllCaps="true"/>
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_margin="@dimen/activity_horizontal_margin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="texting name"
+                android:id="@+id/recipes_title"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                android:textAllCaps="true"/>
+
+            <TextView
+                android:text="TextView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/ingredients_textView"
+                android:paddingStart="@dimen/activity_horizontal_margin"
+                android:paddingEnd="@dimen/activity_horizontal_margin"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
