--- a/app/src/main/res/layout/step_list_item.xml
+++ b/app/src/main/res/layout/step_list_item.xml
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        />
+        android:typeface="sans"
+        android:textColor="@color/colorPrimaryText" />
     <TextView
         android:id="@+id/step_long_description"
         android:layout_width="match_parent"
