--- a/app/src/main/res/layout/fragment_step.xml
+++ b/app/src/main/res/layout/fragment_step.xml
@@ -6,10 +6,6 @@
     tools:context="com.mahmoudtarrasse.baking.ui.StepFragment"
     >
 
-    <!--<com.google.android.exoplayer2.ui.SimpleExoPlayerView-->
-        <!--android:id="@+id/exo_player"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"/>-->
 
 
     <LinearLayout
@@ -18,11 +14,17 @@
         android:orientation="vertical"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
-        <VideoView
+        <!--<VideoView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="150dp"-->
+            <!--android:id="@+id/video_view"-->
+            <!--/>-->
+
+        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+            android:id="@+id/exo_player"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:id="@+id/video_view"
-            />
+            android:layout_height="200dp"/>
+
 
         <LinearLayout
             android:layout_width="match_parent"
