--- a/app/src/main/res/layout/fragment_step.xml
+++ b/app/src/main/res/layout/fragment_step.xml
@@ -19,11 +19,24 @@
             <!--android:layout_height="150dp"-->
             <!--android:id="@+id/video_view"-->
             <!--/>-->
-
-        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
-            android:id="@+id/exo_player"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"/>
+            android:layout_height="200dp">
+            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+                android:id="@+id/exo_player"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="noVideo available"
+                android:gravity="center"
+                android:visibility="gone"
+                android:id="@+id/no_video_available"
+                android:background="#fff"
+                />
+        </FrameLayout>
+
 
 
         <LinearLayout
