--- a/app/src/main/res/layout-sw600dp/fragment_step.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_step.xml
@@ -6,10 +6,23 @@
     tools:context="com.mahmoudtarrasse.baking.ui.StepFragment">
 
 
-    <VideoView
-        android:id="@+id/video_view"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp" />
+        android:layout_height="200dp">
+        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+            android:id="@+id/exo_player"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/novideo_available"
+            android:gravity="center"
+            android:visibility="gone"
+            android:id="@+id/no_video_available"
+            android:background="#fff"
+            />
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
