--- a/app/src/main/res/layout/fragment_step.xml
+++ b/app/src/main/res/layout/fragment_step.xml
@@ -3,9 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.mahmoudtarrasse.baking.ui.StepFragment"
-    >
-
+    tools:context="com.mahmoudtarrasse.baking.ui.StepFragment">
 
 
     <LinearLayout
@@ -14,11 +12,7 @@
         android:orientation="vertical"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
-        <!--<VideoView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="150dp"-->
-            <!--android:id="@+id/video_view"-->
-            <!--/>-->
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="200dp">
@@ -29,7 +23,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="noVideo available"
+                android:text="@string/novideo_available"
                 android:gravity="center"
                 android:visibility="gone"
                 android:id="@+id/no_video_available"
