--- a/app/src/main/res/layout/recipe_widget.xml
+++ b/app/src/main/res/layout/recipe_widget.xml
@@ -12,7 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
-            android:text="Stock Hawk"/>
+            />
     </FrameLayout>
 
     <ListView
@@ -25,5 +25,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="No Recipes Yet"/>
+        android:text="@string/no_recipes_yet"/>
 </LinearLayout>
