--- a/app/src/main/res/layout/recipe_list_item_image.xml
+++ b/app/src/main/res/layout/recipe_list_item_image.xml
@@ -17,30 +17,23 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:weightSum="2">
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:id="@+id/recipe_image"
-                android:layout_weight="1"
-                android:visibility="gone"/>
+                android:layout_weight="1"/>
             <TextView
                 android:layout_margin="@dimen/activity_horizontal_margin"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/recipes_title"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                android:textAllCaps="true"/>
-
-            <TextView
-                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/ingredients_textView"
-                android:paddingStart="@dimen/activity_horizontal_margin"
-                android:paddingEnd="@dimen/activity_horizontal_margin"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
-
+                android:id="@+id/recipes_title"
+                android:layout_weight="1"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
         </LinearLayout>
+
+
     </android.support.v7.widget.CardView>
 </LinearLayout>
