--- a/app/src/main/res/layout/recipe_widget.xml
+++ b/app/src/main/res/layout/recipe_widget.xml
@@ -9,9 +9,11 @@
         android:layout_height="40dp"
         android:background="@color/colorPrimary">
         <TextView
+            android:text="@string/ingredients"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
+            android:textAllCaps="true"
             />
     </FrameLayout>
 
@@ -19,7 +21,8 @@
         android:background="#60ffffff"
         android:id="@+id/recipes_widget_list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        />
     <TextView
         android:id="@+id/widget_empty_view"
         android:layout_width="wrap_content"
